# uchicago-bead-challenge-validation-tool

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/bead_inspector/: __init__.py  constants.py  file_utils.py  main.py  reporting.py  rules.py  validator.py
tests/test_bead_inspector/: test_constants.py  test_reporting.py  test_validator.py
